--- a/led_display/index.html
+++ b/led_display/index.html
@@ -82,17 +82,16 @@
 </script>
 
 
-<p>This sample illustrates the use of the Web Bluetooth API to discover all
-accessible primary services with <code>server.getPrimaryServices</code> and their
-characteristics from a nearby Bluetooth Low Energy Device. You may want to try
-this demo with the BLE Peripheral Simulator App from the <a target="_blank"
-href="https://play.google.com/store/apps/details?id=io.github.webbluetoothcg.bletestperipheral">Google
-Play Store</a> and check out the <a
+<p>Check out the <a
 href="discover-services-and-characteristics.html">Discover Services &
 Characteristics Sample (Promises)</a> sample.</p>
 
+
 <form>
+  <input id="disptxt" type="text"  size=40 placeholder="Alphanumeric characters allowed...">
+  
   <input id="optionalServices" type="text" list="services" size=40 placeholder="Bluetooth Services (e.g. generic_access, 0x1234)">
+  
   <button>Discover services & characteristics</button>
 </form>
 
