--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Sample illustrating the use of Web Bluetooth / Automatic Reconnect (Async Await).">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Web BT / Automatic Reconnect (Async Await) Sample 13:50</title>
+    <title>Web BT / Automatic Reconnect</title>
     <script>
       // Add a global error event listener early on in the page load, to help ensure that browsers
       // which don't support specific functionality still end up displaying a meaningful message.
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web Bluetooth / Automatic Reconnect (Async Await) Sample</h1>
+    <h1>Web BT / Automatic Reconnect (Async Await) Sample 13:50</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -171,7 +171,7 @@ async function connect() {
 		await bluetoothDevice.gatt.connect();
 	  
 		log('Getting Service...');
-		const service = await server.getPrimaryService('000015231212EFDE1523785FEABCD123');
+		const service = await server.getPrimaryService("00001523-1212-EFDE-1523785FEABCD123");
 	
 /*		log('Getting Characteristic...');
 		const characteristic = await service.getCharacteristic(characteristicUuid);
