--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -171,7 +171,7 @@ async function connect() {
 		await bluetoothDevice.gatt.connect();
 	  
 		log('Getting Service...');
-		const service = await server.getPrimaryService("00001523-1212-EFDE-1523785FEABCD123");
+		const service = await server.getPrimaryService('00001523-1212-EFDE-1523785FEABCD123');
 	
 /*		log('Getting Characteristic...');
 		const characteristic = await service.getCharacteristic(characteristicUuid);
