--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 14:18</h1>
+    <h1>Web BT/Async Await Sample 14:25</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -85,8 +85,7 @@
 <p>This sample illustrates the use of the Web Bluetooth API to reconnect to a
 disconnected Bluetooth device using a simple <a
 href="https://en.wikipedia.org/wiki/Exponential_backoff">exponential backoff
-algorithm</a>. You may want to check out the <a
-href="automatic-reconnect.html">Automatic Reconnect (Promises)</a> sample.</p>
+algorithm</a>. You may want to check out the <a href="automatic-reconnect.html">Automatic Reconnect (Promises)</a> sample.</p>
 
 <form>
   <input id="displaymsg" type="text" size=40 placeholder="Alphanumeric characters allowed...">
@@ -171,7 +170,7 @@ async function connect() {
 		await bluetoothDevice.gatt.connect();
 	  
 		log('Getting Service...');
-		const service = await server.getPrimaryService(00001523-1212-EFDE-1523-785FEABCD123);
+		const service = await server.getPrimaryService('00001523-1212-EFDE-1523-785FEABCD123');
 	
 /*		log('Getting Characteristic...');
 		const characteristic = await service.getCharacteristic(characteristicUuid);
