--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 11:21</h1>
+    <h1>Web BT/Async Await Sample 11:29</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -143,7 +143,7 @@ algorithm</a>. You may want to check out the <a href="automatic-reconnect.html">
 	  
 var bluetoothDevice;
 var myDescriptor;
-const serviceUuid = 000015231212EFDE1523785FEABCD123;
+const serviceUuid = '000015231212EFDE1523785FEABCD123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
