--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 11:53</h1>
+    <h1>Web BT/Async Await Sample 11:57</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -180,8 +180,12 @@ async function connect() {
 
 		log('Getting Descriptor...');
 		myDescriptor = await characteristic.getDescriptor('gatt.characteristic_user_description');
-		log(myDescriptor);
-		log(myDescriptor.readValue());
+
+	//	log(myDescriptor);
+		
+		const value = await myDescriptor.readValue();
+			let decoder = new TextDecoder('utf-8');
+			log('> Characteristic User Description: ' + decoder.decode(value));
 		
     },
     function success() {
