--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 11:57</h1>
+    <h1>Web BT/Async Await Sample 1205</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -178,9 +178,44 @@ async function connect() {
 		log('Getting Characteristic...');
 		const characteristic = await service.getCharacteristic(characteristicUuid);
 
-		log('Getting Descriptor...');
-		myDescriptor = await characteristic.getDescriptor('gatt.characteristic_user_description');
+			log('Getting Descriptors...');
+			const descriptors = await characteristic.getDescriptors();
+		    for (const descriptor of descriptors) {
+				switch (descriptor.uuid) {
 
+				case BluetoothUUID.getDescriptor('gatt.client_characteristic_configuration'):
+				  await descriptor.readValue().then(value => {
+					log('> Client Characteristic Configuration:');
+					let notificationsBit = value.getUint8(0) & 0b01;
+					log('  > Notifications: ' + (notificationsBit ? 'ON' : 'OFF'));
+					let indicationsBit = value.getUint8(0) & 0b10;
+					log('  > Indications: ' + (indicationsBit ? 'ON' : 'OFF'));
+				  });
+				  break;
+
+				case BluetoothUUID.getDescriptor('gatt.characteristic_user_description'):
+				  await descriptor.readValue().then(value => {
+					let decoder = new TextDecoder('utf-8');
+					log('> Characteristic User Description: ' + decoder.decode(value));
+				  });
+				  break;
+
+				case BluetoothUUID.getDescriptor('report_reference'):
+				  await descriptor.readValue().then(value => {
+					log('> Report Reference:');
+					log('  > Report ID: ' + value.getUint8(0));
+					log('  > Report Type: ' + getReportType(value));
+				  });
+				  break;
+
+				default: log('> Unknown Descriptor: ' + descriptor.uuid);
+			  }
+			}
+	
+		
+/*		log('Getting Descriptor...');
+		myDescriptor = await characteristic.getDescriptor('gatt.characteristic_user_description');
+*/
 	//	log(myDescriptor);
 		
 		const value = await myDescriptor.readValue();
@@ -205,7 +240,7 @@ async function connect() {
 			*/
     },
     function fail() {
-      time('Failed to reconnect.');
+      time('Failed to send message...');
     }); 
 
 }
