--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -185,9 +185,9 @@ async function connect() {
 */
 	//	log(myDescriptor);
 		
-		const value = await myDescriptor.readValue();
-			let decoder = new TextDecoder('utf-8');
-			log('> Characteristic User Description: ' + decoder.decode(value));
+		//const value = await myDescriptor.readValue();
+	//		let decoder = new TextDecoder('utf-8');
+		//	log('> Characteristic User Description: ' + decoder.decode(value));
 		
     },
     function success() {
