--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1613</h1>
+    <h1>Web BT/Async Await Sample 1616</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -179,8 +179,8 @@ async function connect() {
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
 		
 		let encoder = new TextEncoder('utf-8');
-		//let msg = Uint8Array.of(1);
-		await characteristic.writeValue(encoder.encode(displaymsg));
+		let msg = Uint8Array.of(1);
+		await characteristic.writeValue(displaymsg);
 		
     },
     function success() {
