--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1616</h1>
+    <h1>Web BT/Async Await Sample 1618</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -178,9 +178,9 @@ async function connect() {
 		log('Getting Characteristic...');
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
 		
-		let encoder = new TextEncoder('utf-8');
+		//let encoder = new TextEncoder('utf-8');
 		let msg = Uint8Array.of(1);
-		await characteristic.writeValue(displaymsg);
+		await characteristic.writeValue(msg);
 		
     },
     function success() {
