--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1618</h1>
+    <h1>Web BT/Async Await Sample 1622</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -178,9 +178,19 @@ async function connect() {
 		log('Getting Characteristic...');
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
 		
+		
+		var result = [];
+
+		for(var i = 0; i < displaymsg.length; i+=2)
+			{
+				result.push(parseInt(s.substring(i, i + 2), 16));
+			}
+		result = Uint8Array.from(result)
+		log("Msg: " + result);
+		
 		//let encoder = new TextEncoder('utf-8');
 		let msg = Uint8Array.of(1);
-		await characteristic.writeValue(msg);
+		await characteristic.writeValue(result);
 		
     },
     function success() {
