--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1719</h1>
+    <h1>Web BT/Async Await Sample 1722</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -186,7 +186,7 @@ async function connect() {
 	{
 		msg_data[i+4] = encoder.encode(displaymsg.substring(i, i+1));
 	}
-	msg_data[0] = 3;
+	msg_data[0] = 1;
 	msg_data[1] = displaymsg.length;
 	msg_data[2] = 0;
 	msg_data[3] = 0;
@@ -207,7 +207,7 @@ async function connect() {
 		//	let encoder = new TextEncoder('utf-8');
 		//	await characteristic.writeValue(encoder.encode(displaymsg));
 
-			log('> Message sent to display: ' + displaymsg);
+			log('> Message sent to display: ' + msgdata[4] + msgdata[5] + msgdata[6]+ msgdata[7]);
 			} catch(error)
 			{
 				log('Argh! ' + error);
