--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1725</h1>
+    <h1>Web BT/Async Await Sample 1731</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -181,7 +181,7 @@ async function connect() {
 
 	let encoder = new TextEncoder('utf-8');
 	//var displaymsg = 'hoi';
-	
+	log('> ' + displaymsg);
 
 	for(var i = 0; i < displaymsg.length; i++)
 	{
