--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1731</h1>
+    <h1>Web BT/Async Await Sample 1735</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -149,7 +149,7 @@ const characteristicUuid = '00001525-1212-efde-1523-785feabcd123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
-  let displaymsg = document.querySelector('#displaymsg').value
+  let displaymsg = document.querySelector('#displaymsg').innerHTML;
     //.split(/, ?/).map(s => s.startsWith('0x') ? parseInt(s) : s)
     //.filter(s => s && BluetoothUUID.getService);
 
