--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1735</h1>
+    <h1>Web BT/Async Await Sample 1739</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -149,11 +149,9 @@ const characteristicUuid = '00001525-1212-efde-1523-785feabcd123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
-  let displaymsg = document.querySelector('#displaymsg').innerHTML;
-    //.split(/, ?/).map(s => s.startsWith('0x') ? parseInt(s) : s)
-    //.filter(s => s && BluetoothUUID.getService);
-
+  let displaymsg = document.querySelector('#displaymsg').value;
   bluetoothDevice = null;
+  
   try {
     log('Requesting any Bluetooth Device...');
     bluetoothDevice = await navigator.bluetooth.requestDevice({
@@ -180,7 +178,7 @@ async function connect() {
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
 
 	let encoder = new TextEncoder('utf-8');
-	//var displaymsg = 'hoi';
+	var displaymsg = 'hoi';
 	log('> ' + displaymsg);
 
 	for(var i = 0; i < displaymsg.length; i++)
