--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1742</h1>
+    <h1>Web BT/Async Await Sample 1745</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -178,7 +178,7 @@ async function connect() {
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
 
 	let encoder = new TextEncoder('utf-8');
-	var displaymsg = 'hoi';
+	var displaymsg = '1pertti';
 	log('> ' + displaymsg);
 
 	for(var i = 0; i < displaymsg.length; i++)
@@ -207,7 +207,7 @@ async function connect() {
 		//	let encoder = new TextEncoder('utf-8');
 		//	await characteristic.writeValue(encoder.encode(displaymsg));
 
-			log('> Message sent to display: ' + msg_data[4] + msg_data[5] + msg_data[6]+ msg_data[7]);
+			log('> Message sent to display: ' + msg_data[4] + ' ' + msg_data[5] + ' ' + msg_data[6] + ' ' + msg_data[7]);
 			} catch(error)
 			{
 				log('Argh! ' + error);
