--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1745</h1>
+    <h1>Web BT/Async Await Sample 1749</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -149,7 +149,8 @@ const characteristicUuid = '00001525-1212-efde-1523-785feabcd123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
-  let displaymsg = document.querySelector('#displaymsg').value;
+  //let displaymsg = document.querySelector('#displaymsg').value;
+  let displaymsg = document.getElementById('displaymsg').value;
   bluetoothDevice = null;
   
   try {
@@ -179,7 +180,7 @@ async function connect() {
 
 	let encoder = new TextEncoder('utf-8');
 	var displaymsg = '1pertti';
-	log('> ' + displaymsg);
+	//log('> ' + displaymsg);
 
 	for(var i = 0; i < displaymsg.length; i++)
 	{
