--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -179,8 +179,8 @@ async function connect() {
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
 
 	let encoder = new TextEncoder('utf-8');
-	var displaymsg = '1pertti';
-	//log('> ' + displaymsg);
+	//var displaymsg = '1pertti';
+	log('> ' + displaymsg);
 
 	for(var i = 0; i < displaymsg.length; i++)
 	{
