--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -149,7 +149,7 @@ const characteristicUuid = '00001525-1212-efde-1523-785feabcd123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
-  let displaymsg = document.querySelector('displaymsg').value;
+  let displaymsg = document.querySelector('#displaymsg').value;
   //let displaymsg = document.getElementById('displaymsg').value;
   bluetoothDevice = null;
   
