--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1809</h1>
+    <h1>Web BT/Async Await Sample 1811</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -149,8 +149,8 @@ const characteristicUuid = '00001525-1212-efde-1523-785feabcd123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
-  let displaymsg = document.querySelector('#displaymsg').value;
-  var msgvalue=$("input:displaymsg").val();
+  let userinput = document.querySelector('#displaymsg').value;
+  var displaymsg = userinput.value;
   log('> ' + msgvalue);
   //let displaymsg = document.getElementById('displaymsg').value;
   bluetoothDevice = null;
