--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1818</h1>
+    <h1>Web BT/Async Await Sample 1821</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -151,8 +151,8 @@ async function onButtonClick() {
   // TODO: Validate message text.
   // let userinput = document.querySelector('#displaymsg').value;
   let userinput  = document.getElementById('displaymsg').value;
-  var displaymsg = userinput.value;
-  log('> ' + displaymsg);
+  var displaymessage = userinput.value;
+  log('> ' + displaymessage);
 
   bluetoothDevice = null;
   
@@ -183,15 +183,15 @@ async function connect() {
 
 	let encoder = new TextEncoder('utf-8');
 	//var displaymsg = '1pertti';
-	log('> ' + displaymsg);
+	log('> ' + displaymessage);
 
-	for(var i = 0; i < displaymsg.length; i++)
+	for(var i = 0; i < displaymessage.length; i++)
 	{
-		msg_data[i+4] = encoder.encode(displaymsg.substring(i, i+1));
+		msg_data[i+4] = encoder.encode(displaymessage.substring(i, i+1));
 	}
 	//msg_data[0] = 3;
-	msg_data[0] = encoder.encode(displaymsg.substring(0,1));
-	msg_data[1] = displaymsg.length;
+	msg_data[0] = encoder.encode(displaymessage.substring(0,1));
+	msg_data[1] = displaymessage.length;
 	msg_data[2] = 0;
 	msg_data[3] = 0;
 
