--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1832</h1>
+    <h1>Web BT/Async Await Sample 1838</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -149,8 +149,8 @@ const characteristicUuid = '00001525-1212-efde-1523-785feabcd123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
-  // let userinput = document.querySelector('#displaymsg').value;
-  let userinput = document.getElementById('displaymsg').value;
+   let userinput = document.querySelector('#displaymsg').value;
+  //let userinput = document.getElementById('displaymsg').value;
   var displaymessage = String(userinput.value);
   log('> ' + displaymessage);
 
