--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1842</h1>
+    <h1>Web BT/Async Await Sample 1844</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -182,7 +182,7 @@ async function connect() {
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
 
 	let encoder = new TextEncoder('utf-8');
-	var displaymsg = '1perttivaan';
+	var displaymessage = '1perttivaan';
 	log('> ' + displaymessage);
 
 	for(var i = 0; i < displaymessage.length; i++)
