--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -32,7 +32,7 @@
 
   <body>
     <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Async Await Sample 1844</h1>
+    <h1>Web BT/Async Await Sample 1009</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -120,7 +120,7 @@ algorithm</a>. You may want to check out the <a href="automatic-reconnect.html">
   };
 </script>
 
-<h3>Live Output</h3>
+<h3>Live Output </h3>
 <div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
@@ -149,7 +149,7 @@ const characteristicUuid = '00001525-1212-efde-1523-785feabcd123';
 
 async function onButtonClick() {
   // TODO: Validate message text.
-   var userinput = document.querySelector('#displaymsg').textcontent;
+   var userinput = document.querySelector('#displaymsg').value;
   //let userinput = document.getElementById('displaymsg').value;
 
   var displaymessage = String(userinput.value);
