--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -120,7 +120,7 @@ algorithm</a>. You may want to check out the <a href="automatic-reconnect.html">
   };
 </script>
 
-<h3>Live Output:</h3>
+<h3>Live Output</h3>
 <div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
@@ -190,17 +190,17 @@ async function connect() {
 
 	log('> ' + displaymessage);
 
-	for(var i = 0; i < displaymessage.length; i++)
-	{
-		msg_data[i+4] = encoder.encode(displaymessage.substring(i, i+1));
-	}
-
 	msg_data[0] = encoder.encode(cmd_update_display);		// command to be sent (uint8_t)
 	msg_data[1] = encoder.encode(displaymessage.length);	// message data length (uint8_t)
 	msg_data[2] = 0; 										// data start index 2(uint16_t)
 	msg_data[3] = 0; 										// data start index 1(uint16_t)
+
+	for(var i = 0; i < displaymessage.length; i++)
+	{
+		msg_data[i+4] = encoder.encode(displaymessage.substring(i, i+1));
+	}	
 	
-		await characteristic.writeValue(msg_data);
+	await characteristic.writeValue(msg_data);
 		
     },
     function success() {
