--- a/led_display/disco.html
+++ b/led_display/disco.html
@@ -120,7 +120,7 @@ algorithm</a>. You may want to check out the <a href="automatic-reconnect.html">
   };
 </script>
 
-<h3>Live Output</h3>
+<h3>Live Output...</h3>
 <div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
