--- a/led_display/led.html
+++ b/led_display/led.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sample illustrating the use of Web Bluetooth / Automatic Reconnect (Async Await).">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+   
+   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet"> 
+		   
     <title>Web BT / Automatic Reconnect</title>
     <script>
       // Add a global error event listener early on in the page load, to help ensure that browsers
@@ -81,11 +83,7 @@
   });
 </script>
 
-
-<p>This sample illustrates the use of the Web Bluetooth API to reconnect to a
-disconnected Bluetooth device using a simple <a
-href="https://en.wikipedia.org/wiki/Exponential_backoff">exponential backoff
-algorithm</a>. You may want to check out the <a href="automatic-reconnect.html">Automatic Reconnect (Promises)</a> sample.</p>
+<p>Connect send data to display using Web Bluetooth API and VTT TinyNode. <a id="p7" style="font-weight:600; color:#33ff33;"><a>.</p>
 
 <form>
   <input id="displaymsg" type="text" size=40 placeholder="Alphanumeric characters allowed...">
