--- a/led_display/led.html
+++ b/led_display/led.html
@@ -81,8 +81,8 @@
 <p>Connect and send data to display using Web Bluetooth API and VTT TinyNode.</p>
 </p>
 
-<form>
-  <input id="displaymsg" type="text" size=40 placeholder="Alphanumeric characters allowed...">
+<form align="center">
+  <input id="displaymsg" type="textarea"  rows="4" cols="100" style="font-size: 18pt" size=35 placeholder="Alphanumeric characters allowed...">
   <button style="height:50px;width:100px">SEND</button>
 </form>
 
