--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,8 +28,9 @@
   </head>
 
   <body>
-    <img class="pageIcon" src="icon.png">
-    <h1>Web BT/Led display</h1>
+    <img class="pageIcon" src="vtt_logo.jpg">
+    
+	<h1>Web BT/Led display</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -82,7 +83,8 @@
 </p>
 
 <form align="center">
-  <input id="displaymsg" type="textarea"  rows="4" cols="100" style="font-size: 18pt" size=35 placeholder="Alphanumeric characters allowed...">
+  <input id="displaymsg" type="textarea"  rows="4" cols="100" style="font-size: 14pt" size=35 placeholder="Alphanumeric characters allowed...">
+  <br><br>
   <button style="height:50px;width:100px">SEND</button>
 </form>
 
