--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,9 +28,8 @@
   </head>
 
   <body>
-    <img class="pageIcon" src="vtt_logo.jpg">
-    
-	<h1>Web BT/Led display</h1>
+    <h2><img class="pageIcon" src="vtt_logo.jpg">    
+	Web BT/Led display</h2>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -83,7 +82,7 @@
 </p>
 
 <form align="center">
-  <input id="displaymsg" type="textarea"  rows="4" cols="100" style="font-size: 14pt" size=35 placeholder="Alphanumeric characters allowed...">
+  <input id="displaymsg" type="textarea" rows="4" cols="100" style="font-size: 14pt" size=35 placeholder="Alphanumeric characters allowed...">
   <br><br>
   <button style="height:50px;width:100px">SEND</button>
 </form>
@@ -129,6 +128,8 @@
   <div id="status"></div>
   <pre id="log"></pre>
 </div>
+
+<p style="font-family: 'Open Sans'; font-size:8px; font-weight:600; text-align: center;">Made by VTT Finland 2017.</p>
 
 
 <script>
