--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,8 +28,8 @@
   </head>
 
   <body>
-    <h2><img class="pageIcon" src="vtt_logo.jpg">    
-	Web BT/Led display</h2>
+    <h1><img class="pageIcon" src="vtt_logo.jpg">    
+	VTT Led Display demo</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -78,11 +78,11 @@
   });
 </script>
 
-<p>Connect and send data to display using Web Bluetooth API and VTT TinyNode.</p>
+<p>Connect and send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
 </p>
 
 <form align="center">
-  <input id="displaymsg" type="textarea" rows="4" cols="100" style="font-size: 14pt" size=35 placeholder="Alphanumeric characters allowed...">
+  <input id="displaymsg" type="textarea" style="font-size: 14pt; width: 400px; height: 100px;" size=35 placeholder="Alphanumeric characters allowed...">
   <br><br>
   <button style="height:50px;width:100px">SEND</button>
 </form>
@@ -115,10 +115,10 @@
   };
 </script>
 
- <table width="340" align="center">
+ <table width="100%" align="center">
   <tr>
     <td style="text-align: left;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;">Ready for connection...</p></td>
-	<td style="text-align: right;"><p id="p4" style="font-family: 'Open Sans'; font-size:11px;">Messages: 0</p></td>
+	<td style="text-align: right;"><p id="p4" style="font-family: 'Open Sans'; font-size:11px;"> </p></td>
   </tr>
 </table>
 
