--- a/led_display/led.html
+++ b/led_display/led.html
@@ -29,7 +29,7 @@
 
   <body>
     <h1><img class="pageIcon" src="vtt_logo.jpg">    
-	VTT Led Display demo</h1>
+	VTT Display demo</h1>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -82,7 +82,7 @@
 </p>
 
 <form align="center">
-  <input id="displaymsg" type="textarea" style="font-size: 14pt; width: 400px; height: 100px;" size=35 placeholder="Alphanumeric characters allowed...">
+  <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt;" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
   <br><br>
   <button style="height:50px;width:100px">SEND</button>
 </form>
