--- a/led_display/led.html
+++ b/led_display/led.html
@@ -29,7 +29,7 @@
 
   <body>
     <h1><img class="pageIcon" src="vtt_logo.jpg">    
-	VTT Display demo</h1>
+	Led Display demo</h1>
     
 <script>
   if('serviceWorker' in navigator) {
