--- a/led_display/led.html
+++ b/led_display/led.html
@@ -84,7 +84,7 @@
 <form align="center">
   <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt;" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
   <br><br>
-  <button style="height:50px;width:100px">SEND</button>
+  <button style="font-size:20px;height:80px;width:200px">SEND</button>
 </form>
 
 <script>
