--- a/led_display/led.html
+++ b/led_display/led.html
@@ -81,12 +81,13 @@
 <p>Connect and send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
 </p>
 
-<form align="center">
-  <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt;" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
-  <br><br>
-  <button style="font-size:20px;height:80px;width:200px">SEND</button>
-</form>
-
+<div style="text-align:center">  
+	<form align="center">
+	  <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt;" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
+	  </p>
+	  <button style="font-size:20px;height:80px;width:200px">SEND</button>
+	</form>
+</div>
 <script>
   var ChromeSamples = {
     log: function() {
