--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <h1><img class="pageIcon" src="vtt_logo.jpg">    
+    <h1><img class="pageIcon" src="vtt_logo.jpg" align="top">    
 	Led Display demo</h1>
     
 <script>
