--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,8 +28,8 @@
   </head>
 
   <body>
-    <h1><img class="pageIcon" src="vtt_logo.jpg" align="top">    
-	Led Display demo</h1>
+    <h1 style="font-family: 'Open Sans'; font-size:14px; color: #000080"><img class="pageIcon" src="vtt_logo.jpg" align="top">    
+	LED DISPLAY DEMO</h1>
     
 <script>
   if('serviceWorker' in navigator) {
