--- a/led_display/led.html
+++ b/led_display/led.html
@@ -78,7 +78,7 @@
   });
 </script>
 
-<p>Connect and send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
+<p style="font-family: 'Open Sans'; font-size:14px;";>Connect and send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
 </p>
 
 <div style="text-align:center">  
