--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <h1 style="font-family: 'Open Sans'; font-size:20px; color: #000080"><img class="pageIcon" src="vtt_logo.jpg" align="top">    
+    <h1 style="font-family: 'Open Sans'; font-size:22px; color: #000080"><img class="pageIcon" src="vtt_logo.jpg" align="top">    
 	LED DISPLAY DEMO</h1>
     
 <script>
@@ -78,12 +78,12 @@
   });
 </script>
 
-<p style="font-family: 'Open Sans'; font-size:14px;";>Connect and send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
+<p style="font-family: 'Open Sans'; font-size:16px;";>Connect and send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
 </p>
 
 <div style="text-align:center">  
 	<form align="center">
-	  <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt;" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
+	  <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt; background-color='#f8f9f9';" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
 	  </p>
 	  <button style="font-size:20px;height:80px;width:200px">SEND</button>
 	</form>
