--- a/led_display/led.html
+++ b/led_display/led.html
@@ -30,6 +30,7 @@
   <body>
     <h1 style="font-family: 'Open Sans'; font-size:22px; color: #000080"><img class="pageIcon" src="vtt_logo.jpg" align="top">    
 	LED DISPLAY DEMO</h1>
+	<hr>
     
 <script>
   if('serviceWorker' in navigator) {
@@ -78,14 +79,14 @@
   });
 </script>
 
-<p style="font-family: 'Open Sans'; font-size:16px;";>Connect and send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
+<p style="font-family: 'Open Sans'; font-size:16px;";>Send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
 </p>
 
 <div style="text-align:center">  
 	<form align="center">
-	  <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt; background-color='#f8f9f9';" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
+	  <textarea id="displaymsg" cols="36" rows="5" style="font-size: 14pt; background-color='red';" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
 	  </p>
-	  <button style="font-size:20px;height:80px;width:200px">SEND</button>
+	  <button style="font-size:20px;font-weight:600;height:80px;width:200px">SEND</button>
 	</form>
 </div>
 <script>
